Create and register SignInsController
